testing if connected properly

--- a/tes2-2.html
+++ b/tes2-2.html
@@ -2,7 +2,7 @@
 <html style="height: 100%;">
 <head>
     <meta charset="UTF-8" />
-    <title>test 2.2</title>
+    <title>test 2+git</title>
     <style>
         body{
             margin:0;
