--- a/tes2-2.html
+++ b/tes2-2.html
@@ -15,14 +15,16 @@
     
         .grid-container{
             display: flex;
+            overflow: hidden;
             height: 100%;
             margin: 5%;
-            border-radius: 4%;
+            border-radius: 2%;
             justify-content: center;
             background-color: rgb(122 168 207 / 80%);
             align-items: center;
-            grid-column: 1 / span 4;
+            grid-column: 2 / span 2;
             grid-row: 2 / span 3;
+            flex-direction: column;
         }
 
         p{
@@ -83,7 +85,11 @@ li a:hover {
   background-color: #111;
 }
 
-
+img{
+    max-width: 100%;
+    max-height: 100%;
+    align-self: center;
+}
     </style>
 </head>
 <body>
@@ -99,12 +105,14 @@ li a:hover {
         </div>
 <!-- Grid conatiner -->
         <div class="grid-container">
-            <!-- form on the left -->
-            <div style="width: 50%">
-                <h1>Abstract Image </h1>
+            <!-- form on the bottom -->
+            <div style="width: 100%;height: 20%;display: flex;justify-content: center">
+                <img src="logo.png" >
             </div>
             <!-- Image on the right -->
-            
+            <div style="width: 100%;height: 80%">
+                <h1>Place holder text</h1>
+            </div>
         </div>
 
     </div>
