--- a/tes2-2.html
+++ b/tes2-2.html
@@ -19,6 +19,7 @@
             height: 100%;
             margin: 5%;
             border-radius: 2%;
+            border: 2px solid transparent;
             justify-content: center;
             background-color: rgb(122 168 207 / 80%);
             align-items: center;
@@ -27,6 +28,7 @@
             flex-direction: column;
         }
 
+        
         p{
             color: rgb(0, 0, 0);
             font-size: 1.5rem;
@@ -90,6 +92,12 @@ img{
     max-height: 100%;
     align-self: center;
 }
+
+form{
+    display: flex;
+    flex-direction: column;
+}
+
     </style>
 </head>
 <body>
@@ -111,8 +119,11 @@ img{
             </div>
             <!-- Image on the right -->
             <div style="width: 100%;height: 80%">
-                <h1>Place holder text</h1>
-            </div>
+                    <form  method='post'>
+                        Username: <input type='text' name='name'><br>
+                        Password: <input type='text' name='email'><br>
+                        <input type='submit'>
+                    </form>
         </div>
 
     </div>
