--- a/index/index.html
+++ b/index/index.html
@@ -2,7 +2,7 @@
 <html style="height: 100%;">
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="index.css">
     <title>test</title>
 </head>
 <body>
