--- a/main/main.html
+++ b/main/main.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="main.css">
+    <link href='https://fonts.googleapis.com/css?family=ADLaM Display' rel='stylesheet'>
+
     <title>test</title>
 </head>
 <body>
@@ -18,19 +20,21 @@
         </div>
 <!-- Grid conatiner -->
         <div class="grid-container">
-            <!-- form on the bottom -->
-            <div style="width: 100%;height: 20%;display: flex;justify-content: center">
-                <img src="../resources/logo.png" >
+            <div class="row">
+                <p>FIGHTING GAMES</p>
+                    <img src="../resources/kof1.jpg" alt="Snow" style="width:100%">
+                    <img src="../resources/gg1.jpeg" alt="Forest" style="width:100%">
+                    <img src="../resources/kof1.jpg" alt="Snow" style="width:100%">
+                    <img src="../resources/gg1.jpeg" alt="Mountains" style="width:100%">
             </div>
-            <!-- Image on the right -->
-            <div style="width: 100%;height: 80%">
-                    <form  method='post'>
-                        Username: <input type='text' name='name'><br>
-                        Password: <input type='text' name='email'><br>
-                        <input type='submit'>
-                    </form>
+            <div class="row">
+                <p>SECOND CATEGORY</p>
+                <img src="../resources/kof1.jpg" alt="Snow" style="width:100%">
+                <img src="../resources/gg1.jpeg" alt="Forest" style="width:100%">
+                <img src="../resources/kof1.jpg" alt="Snow" style="width:100%">
+                <img src="../resources/gg1.jpeg" alt="Mountains" style="width:100%">
+            </div>
+            </div>
         </div>
-
-    </div>
 </body>
 </html>
