--- a/index/index.html
+++ b/index/index.html
@@ -18,18 +18,16 @@
         </div>
 <!-- Grid conatiner -->
         <div class="grid-container">
-            <!-- form on the bottom -->
-            <div style="width: 100%;height: 20%;display: flex;justify-content: center">
+            <!-- top image -->
+            <div>
                 <img src="../resources/logo.png" >
             </div>
-            <!-- Image on the right -->
+            <!-- middle text -->
             <div style="width: 100%;height: 80%">
-                    <form  method='post'>
-                        Username: <input type='text' name='name'><br>
-                        Password: <input type='text' name='email'><br>
-                        <input type='submit'>
-                    </form>
+                <h1>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </h1>
         </div>
+        <button class="button button1">Register</button>
+        <button class="button button1">Login</button>
 
     </div>
 </body>
