finalized layout of main content

--- a/main/main.html
+++ b/main/main.html
@@ -21,18 +21,25 @@
 <!-- Grid conatiner -->
         <div class="grid-container">
             <div class="row">
-                <p>FIGHTING GAMES</p>
-                    <img src="../resources/kof1.jpg" alt="Snow" style="width:100%">
-                    <img src="../resources/gg1.jpeg" alt="Forest" style="width:100%">
-                    <img src="../resources/kof1.jpg" alt="Snow" style="width:100%">
-                    <img src="../resources/gg1.jpeg" alt="Mountains" style="width:100%">
+                <p>🅵🅸🅶🅷🅸🅽🅶 🅶🅰🅼🅴🆂</p>
+                    <img src="../resources/kof1.jpg" alt="Snow"
+                         onmouseover="this.src='../resources/kof2.gif';"
+                         onmouseout="this.src='../resources/kof1.jpg';"
+                        >
+                    <img src="../resources/gg1.jpeg" alt="Forest" >
+                    <img src="../resources/kof1.jpg" alt="Snow" >
+                    <img src="../resources/gg1.jpeg" alt="Mountains" >
+                    <img src="../resources/kof1.jpg" alt="Snow" >
+
             </div>
             <div class="row">
-                <p>SECOND CATEGORY</p>
-                <img src="../resources/kof1.jpg" alt="Snow" style="width:100%">
-                <img src="../resources/gg1.jpeg" alt="Forest" style="width:100%">
-                <img src="../resources/kof1.jpg" alt="Snow" style="width:100%">
-                <img src="../resources/gg1.jpeg" alt="Mountains" style="width:100%">
+                <p>🆂🅴🅲🅾🅽🅳 🅲🅰🆃🅴🅶🅾🆁🆈</p>
+                <img src="../resources/kof1.jpg" alt="Snow" >
+                <img src="../resources/gg1.jpeg" alt="Forest" >
+                <img src="../resources/kof1.jpg" alt="Snow" >
+                <img src="../resources/gg1.jpeg" alt="Mountains" >
+                <img src="../resources/kof1.jpg" alt="Snow" >
+
             </div>
             </div>
         </div>
