main layout update

--- a/main/main.html
+++ b/main/main.html
@@ -22,14 +22,31 @@
         <div class="grid-container">
             <div class="row">
                 <p>🅵🅸🅶🅷🅸🅽🅶 🅶🅰🅼🅴🆂</p>
-                    <img src="../resources/kof1.jpg" alt="Snow"
+                    <img src="../resources/kof1.jpg" alt="Kof"
                          onmouseover="this.src='../resources/kof2.gif';"
-                         onmouseout="this.src='../resources/kof1.jpg';"
-                        >
-                    <img src="../resources/gg1.jpeg" alt="Forest" >
-                    <img src="../resources/kof1.jpg" alt="Snow" >
-                    <img src="../resources/gg1.jpeg" alt="Mountains" >
-                    <img src="../resources/kof1.jpg" alt="Snow" >
+                         onmouseout="this.src='../resources/kof1.jpg';">
+
+                <img src="../resources/gg1.jpeg" alt="Snow"
+                     onmouseover="this.src='../resources/gg2.gif';"
+                     onmouseout="this.src='../resources/gg1.jpeg';">
+
+                <img src="../resources/sf6.jpg" alt="Snow"
+                     onmouseover="this.src='../resources/sf6.gif';"
+                     onmouseout="this.src='../resources/sf6.jpg';">
+
+                <img src="../resources/tk1.jpeg" alt="Snow"
+                     onmouseover="this.src='../resources/tk7.gif';"
+                     onmouseout="this.src='../resources/tk1.jpeg';">
+
+                <img src="../resources/dbz.jpeg" alt="Snow"
+                     onmouseover="this.src='../resources/dbz.gif';"
+                     onmouseout="this.src='../resources/dbz.jpeg';">
+
+<!--
+                <img src="../resources/4" alt="Snow"
+                     onmouseover="this.src='../resources/5.gif';"
+                     onmouseout="this.src='../resources/4';">
+-->
 
             </div>
             <div class="row">
