--- a/index/index.html
+++ b/index/index.html
@@ -10,11 +10,11 @@
 <!-- Top navigation bar -->
         <div class="navbar">
             <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
-          </ul>
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#main">Main</a></li>
+                <li><a href="../login_register/register.html">Login</a>
+                <li><a href="../login_register/register.html">Regiser</a>
+            </ul>
         </div>
 <!-- Grid conatiner -->
         <div class="grid-container">
@@ -26,8 +26,8 @@
             <div style="width: 100%;height: 80%">
                 <h1>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </h1>
         </div>
-        <button class="button button1">Register</button>
-        <button class="button button1">Login</button>
+        <button class="button button1" onclick="location.href = '../login_register/register.html'">Register</button>
+        <button class="button button1" onclick="location.href = '../login_register/register.html'">Login</button>
 
     </div>
 </body>
