--- a/login_register/register.html
+++ b/login_register/register.html
@@ -13,10 +13,10 @@
     <!-- Top navigation bar -->
     <div class="navbar">
         <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="../index/index.html">Home</a></li>
+            <li><a  href="#main">Main</a></li>
+            <<li><a class="active" href="#login">Login</a></li>
+            <li><a class="active" href="#register">Regiser</a></li>
         </ul>
     </div>
 <!--    image -->
@@ -31,7 +31,7 @@
         </fieldset>
         <fieldset id="actions">
             <input type="submit" id="submit" value="Register">
-            <a href="index.html" id="back">Ritorna al sito</a>
+            <a href="../index/index.html" id="back">Ritorna al sito</a>
         </fieldset>
     </form>
     </div>
