--- a/main/main.html
+++ b/main/main.html
@@ -12,11 +12,10 @@
 <!-- Top navigation bar -->
         <div class="navbar">
             <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
-          </ul>
+            <li><a href="../index/index.html">Home</a></li>
+            <li><a class="active" href="#main">Main</a></li>
+            <li><a href="../login_register/register.html">Login</a>
+            <li><a href="../login_register/register.html">Regiser</a>
         </div>
 <!-- Grid conatiner -->
         <div class="grid-container">
