figuring out php

--- a/login_register/register.html
+++ b/login_register/register.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="../index/index.html">Home</a></li>
             <li><a  href="#main">Main</a></li>
-            <<li><a class="active" href="#login">Login</a></li>
+            <li><a class="active" href="#login">Login</a></li>
             <li><a class="active" href="#register">Regiser</a></li>
         </ul>
     </div>
