INSERT ALMOST COMPLETE
sends you to the correct page but  alert message not yet implemented

--- a/login_register/register.html
+++ b/login_register/register.html
@@ -24,10 +24,10 @@
     <!-- content conatiner -->
     <div class="content">
         <div class="icon"></div><br>
-        <form id="login" action= "register.php" method="post">
+        <form id="login" action= "register_2.php" method="post">
         <fieldset id="inputs">
-            <input id="utente" name="utente" type="text" placeholder="Username" autofocus required>
-            <input id="password" name="password" type="password" placeholder="Password" required>
+            <input id="username" name="username" type="text"  placeholder="Username" autofocus required>
+            <input id="password" name="password" type="password"  placeholder="Password" required>
         </fieldset>
         <fieldset id="actions">
             <input type="submit" id="submit" value="Register">
