finally completed registry
after  hours alert message after registration is completed

--- a/index/index.html
+++ b/index/index.html
@@ -13,7 +13,7 @@
                 <li><a class="active" href="#home">Home</a></li>
                 <li><a href="#main">Main</a></li>
                 <li><a href="../login_register/register.html">Login</a>
-                <li><a href="../login_register/register.html">Regiser</a>
+                <li><a href="../login_register/register_html.php">Regiser</a>
             </ul>
         </div>
 <!-- Grid conatiner -->
