--- a/main/main.html
+++ b/main/main.html
@@ -15,7 +15,7 @@
             <li><a href="../index/index.html">Home</a></li>
             <li><a class="active" href="#main">Main</a></li>
             <li><a href="../login_register/register.html">Login</a>
-            <li><a href="../login_register/register.html">Regiser</a>
+            <li><a href="../login_register/register_html.php">Regiser</a>
         </div>
 <!-- Grid conatiner -->
         <div class="grid-container">
