--- a/index/index.html
+++ b/index/index.html
@@ -10,9 +10,9 @@
 <!-- Top navigation bar -->
         <div class="navbar">
             <ul>
-                <li><a class="active" href="#home">Home</a></li>
+                <li><a class="active">Home</a></li>
                 <li><a href="#main">Main</a></li>
-                <li><a href="../login_register/register.html">Login</a>
+                <li><a href="../login_register/login.html">Login</a>
                 <li><a href="../login_register/register_html.php">Regiser</a>
             </ul>
         </div>
