--- a/main/main.html
+++ b/main/main.html
@@ -14,7 +14,7 @@
             <ul>
             <li><a href="../index/index.html">Home</a></li>
             <li><a class="active" href="#main">Main</a></li>
-            <li><a href="../login_register/register.html">Login</a>
+            <li><a href="../login_register/login.html">Login</a>
             <li><a href="../login_register/register_html.php">Regiser</a>
         </div>
 <!-- Grid conatiner -->
