--- a/index/index.html
+++ b/index/index.html
@@ -26,8 +26,8 @@
             <div style="width: 100%;height: 80%">
                 <h1>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </h1>
         </div>
-        <button class="button button1" onclick="location.href = '../login_register/register.html'">Register</button>
-        <button class="button button1" onclick="location.href = '../login_register/register.html'">Login</button>
+        <button class="button button1" onclick="location.href = '../login_register/register_html.php'">Register</button>
+        <button class="button button1" onclick="location.href = '../login_register/login.html'">Login</button>
 
     </div>
 </body>
