final games added on main

--- a/main/main.html
+++ b/main/main.html
@@ -49,12 +49,26 @@
 
             </div>
             <div class="row">
-                <p>🆂🅴🅲🅾🅽🅳 🅲🅰🆃🅴🅶🅾🆁🆈</p>
-                <img src="../resources/kof1.jpg" alt="Snow" >
-                <img src="../resources/gg1.jpeg" alt="Forest" >
-                <img src="../resources/kof1.jpg" alt="Snow" >
-                <img src="../resources/gg1.jpeg" alt="Mountains" >
-                <img src="../resources/kof1.jpg" alt="Snow" >
+                <p>🆃🅾🅿 🆃🆁🅴🅽🅳🅸🅽🅶 🅲🅰🆃🅴🅶🅾🆁🆈</p>
+                <img src="../resources/mh.jpg" alt="Snow"
+                     onmouseover="this.src='../resources/mh.gif';"
+                     onmouseout="this.src='../resources/mh.jpg';">
+
+                <img src="../resources/yakuza.jpg" alt="Snow"
+                     onmouseover="this.src='../resources/yakuza.gif';"
+                     onmouseout="this.src='../resources/yakuza.jpg';">
+
+                <img src="../resources/elden.jpg" alt="Snow"
+                     onmouseover="this.src='../resources/elden.gif';"
+                     onmouseout="this.src='../resources/elden.jpg';">
+
+                <img src="../resources/spm.jpg" alt="Snow"
+                     onmouseover="this.src='../resources/spm.gif';"
+                     onmouseout="this.src='../resources/spm.jpg';">
+
+                <img src="../resources/mgg.jpg" alt="Snow"
+                     onmouseover="this.src='../resources/mgg.gif';"
+                     onmouseout="this.src='../resources/mgg.jpg';">
 
             </div>
             </div>
