--- a/index/index.html
+++ b/index/index.html
@@ -24,7 +24,11 @@
             </div>
             <!-- middle text -->
             <div style="width: 100%;height: 80%">
-                <h1>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </h1>
+                <h1>Benvenuto al sito </h1>
+                <h1>Benvenuto allo sportello di giochi</h1>
+                <br>
+                <h1>Welcome to the website</h1>
+                <h1>Welcome to a web portal for some of my favoutite games</h1>
         </div>
         <button class="button button1" onclick="location.href = '../login_register/register_html.php'">Register</button>
         <button class="button button1" onclick="location.href = '../login_register/login.html'">Login</button>
