--- a/test 4/register.html
+++ b/test 4/register.html
@@ -1,6 +1,6 @@
-<form method="post" action="executelogin.php">
+<form method="post" action="login.php">
 	<h1>Login</h1>
 	<input type="text" id="username" placeholder="Username" name="username">
-	<input type="password" id="password" placeholder="Password" name="password">
+	<input type="text" id="password" placeholder="Password" name="password">
 	<button type="submit" name="login">Accedi</button>
 </form>
