--- a/login_register/login.html
+++ b/login_register/login.html
@@ -26,7 +26,7 @@
         <div class="icon"></div><br>
         <form id="login" action= "login.php" method="post">
             <fieldset id="inputs">
-                <input id="utente" name="utente" type="text"  placeholder="Username" autofocus required>
+                <input id="username" name="username" type="text"  placeholder="Username" autofocus required>
                 <input id="password" name="password" type="password"  placeholder="Password" required>
             </fieldset>
             <fieldset id="actions">
