--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
             <ul>
                 <li><a class="active">Home</a></li>
                 <li><a href="#main">Main</a></li>
-                <li><a href="../login_register/login.html">Login</a>
-                <li><a href="../login_register/register_html.php">Regiser</a>
+                <li><a href="login_register/login.html">Login</a>
+                <li><a href="login_register/register_html.php">Regiser</a>
             </ul>
         </div>
 <!-- Grid conatiner -->
         <div class="grid-container">
             <!-- top image -->
             <div>
-                <img src="../resources/logo.png" >
+                <img src="resources/logo.png" >
             </div>
             <!-- middle text -->
             <div style="width: 100%;height: 80%">
@@ -30,8 +30,8 @@
                 <h1>Welcome to the website</h1>
                 <h1>Welcome to a web portal for some of my favoutite games</h1>
         </div>
-        <button class="button button1" onclick="location.href = '../login_register/register_html.php'">Register</button>
-        <button class="button button1" onclick="location.href = '../login_register/login.html'">Login</button>
+        <button class="button button1" onclick="window.location.href = 'login_register/register_html.php'">Register</button>
+        <button class="button button1" onclick="window.location.href = 'login_register/login.html'">Login</button>
 
     </div>
 </body>
