--- a/login_register/login.html
+++ b/login_register/login.html
@@ -13,7 +13,7 @@
     <!-- Top navigation bar -->
     <div class="navbar">
         <ul>
-            <li><a href="../index/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a>Main</a></li>
             <li><a class="active" >Login</a></li>
             <li><a  href="register_html.php">Regiser</a></li>
