--- a/login_register/login.html
+++ b/login_register/login.html
@@ -31,7 +31,7 @@
             </fieldset>
             <fieldset id="actions">
                 <input type="submit" id="submit" value="Login">
-                <a href="../index/index.html" id="back">Ritorna al sito</a>
+                <a href="../index.html" id="back">Ritorna al sito</a>
             </fieldset>
         </form>
     </div>
