--- a/login_register/login.html
+++ b/login_register/login.html
@@ -2,8 +2,7 @@
 <head>
 
     <title>login page</title>
-
-    <!-- Pannello di gestione accesso-->
+    <!-- File css-->
     <link href="admin.css" rel="stylesheet" type="text/css" />
 
 </head>
